--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "normalize.scss": "^0.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-sidebar-menu": "^4.5.3",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
