shop_online index

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "star-admin",
+  "name": "shop_online",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Bootstrapdash.com",
