--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "2.0.0-rc.1",
+    "bootstrap-vue": "^2.11.0",
     "compass-mixins": "0.12.10",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
@@ -23,6 +24,7 @@
     "vue": "^2.5.2",
     "vue-md-date-picker": "1.0.15",
     "vue-router": "^3.0.1",
+    "vuex": "^3.1.3",
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
