--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
     "mdi": "2.1.19",
+    "sweetalert2": "^9.10.10",
     "vue": "^2.5.2",
     "vue-md-date-picker": "1.0.15",
     "vue-router": "^3.0.1",
