--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue": "^2.5.2",
     "vue-md-date-picker": "1.0.15",
     "vue-router": "^3.0.1",
+    "vuetify": "^2.2.22",
     "vuex": "^3.1.3",
     "webpack-cli": "^3.3.11"
   },
