--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "font-awesome": "4.7.0",
     "mdi": "2.1.19",
     "moment": "^2.24.0",
-    "sweetalert2": "^9.10.10",
+    "sweetalert2": "^9.10.12",
     "vue": "^2.5.2",
     "vue-md-date-picker": "1.0.15",
     "vue-router": "^3.0.1",
@@ -56,6 +56,7 @@
     "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "0.28.9",
+    "deepmerge": "^4.2.2",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -66,6 +67,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fibers": "^4.0.2",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^4.0.0-beta.14",
@@ -91,6 +93,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
@@ -104,7 +107,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^4.42.0",
-    "webpack-bundle-analyzer": "^3.6.1",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.1.0"
   },
